--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.3",
     "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
+    "react-day-picker": "^8.0.5",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
