--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.0.5",
     "react-dom": "^17.0.2",
